--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,11 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "vercel": "^32.2.0"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "vercel-build": "run"
   }
 }
