--- a/api/api/package.json
+++ b/api/api/package.json
@@ -12,7 +12,6 @@
     "vercel": "^32.2.0"
   },
   "scripts": {
-    "start": "nodemon index.js",
-    "vercel-build": "run"
+    "start": "nodemon index.js"
   }
 }
